# trading-terminal

./: .gitignore  Dockerfile  README.md  analytics.py  app.py  config.py  db.py  pyproject.toml  requirements.txt  schema.sql  sync_to_cloud.py
.github/workflows/: ci.yml
backtest/: data.py  engine.py  models.py  routes.py
execution/: alpaca_trader.py
notifications/: discord.py
static/css/: terminal.css
static/js/: backtester.js  performance.js  strategy-lab.js  terminal.js
strategy_lab/: __init__.py  importer.py  indicators.py  models.py  routes.py  scanner.py
templates/: dashboard.html
tests/: conftest.py  test_api.py  test_blockbar.py  test_config.py  test_security.py  test_strategy_lab.py
